Added limits & fixed expect for upstart script

--- a/init.d/upstart.conf
+++ b/init.d/upstart.conf
@@ -10,7 +10,8 @@ kill timeout 30
 respawn
 respawn limit 10 5
 
-expect daemon
+limit memlock unlimited unlimited
+limit rtprio 95 95
 
 env USER=onebutton
 env BASEDIR=/srv/onebutton
