--- a/plugins/display/matrix8x8-usb/build
+++ b/plugins/display/matrix8x8-usb/build
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/sh -e
 
 VERSION="1.6.9"
 
@@ -25,7 +25,7 @@ if [ ! -d "/tmp/${SUBDIR}" ]; then
     tar xf "${ARDUINO_DIR}.tar.xz" -C "${UNPACK_DIR}"
 fi
 
-OUTPUTDIR=$(mktemp -d -p "arduino_build")
+OUTPUTDIR=$(mktemp -d "/tmp/arduino-build.XXXXXXXX")
 trap "rm -rf ${OUTPUTDIR}" EXIT
 
 
